fixed bug so scrolltoTop only works on mobile as intended

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   margin: 0;
   padding: 0;
@@ -6,11 +6,8 @@ body {
   width: 100vw;
   height: 100vh;
 }
+ */
 
-/* .all-movies {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-} */
 
 
 
